--- a/viewmodeltest/build.gradle
+++ b/viewmodeltest/build.gradle
@@ -22,13 +22,16 @@ android {
 }
 
 dependencies {
+    def config = Version.dependencies
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation config.kotlin
+    implementation config.androidX.appcompat
+    implementation config.androidX.core
+    implementation config.androidX.constraintlayout
+
+    testImplementation config.test.java_junit
+    androidTestImplementation config.test.junit
+    androidTestImplementation config.test.espresso
+
+    implementation config.lifecycle.extensions
 }
