--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-
-    repositories {
-        google()
-        jcenter()
-
-    }
+    Version.addRepos(repositories)
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$Version.kotlin_version"
@@ -16,11 +11,7 @@ buildscript {
 }
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
-
-    }
+    Version.addRepos(repositories)
 }
 
 task clean(type: Delete) {
