--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':viewmodeltest', ':livedatatest', ':buildSrc'
+include ':viewmodeltest', ':livedatatest', ':buildSrc', ':databindingtest'
 rootProject.name='JetpackTest'
