使用DataBinding 实现点赞取消赞

--- a/databindingtest/build.gradle
+++ b/databindingtest/build.gradle
@@ -13,6 +13,9 @@ android {
         versionName Version.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        dataBinding{
+            enabled = true
+        }
     }
 
     buildTypes {
