ViewModel SavedState example

--- a/viewmodeltest/build.gradle
+++ b/viewmodeltest/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     androidTestImplementation config.test.espresso
 
     implementation config.lifecycle.extensions
+    implementation config.lifecycle.savedstate
 }
