--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':viewmodeltest', ':livedatatest', ':buildSrc', ':demo_databinding', ':demo_navigation'
+include ':viewmodeltest', ':demo_livedata', ':buildSrc', ':demo_databinding', ':demo_navigation'
 rootProject.name='JetpackTest'
