rename demo_lifecycle applicationId

--- a/demo_lifecycle/build.gradle
+++ b/demo_lifecycle/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion Version.buildToolsVersion
 
     defaultConfig {
-        applicationId "com.yyz.databindingtest"
+        applicationId "com.yyz.lifecycle"
         minSdkVersion Version.minSdkVersion
         targetSdkVersion Version.targetSdkVersion
         versionCode Version.versionCode
