finish Room demo

--- a/demo_room/build.gradle
+++ b/demo_room/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     implementation config.room.ktx
     kapt config.room.compiler
     testImplementation config.room.testing
+
+    implementation config.lifecycle.livedata_ktx
 }
